# BeerPongSentinel

./: .gitignore  AltitudeControl.cpp  AltitudeControl.h  AzimuthControl.cpp  AzimuthControl.h  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  CameraCaptureThread.cpp  CameraCaptureThread.h  CameraSetup.cpp  CameraStreamWidget.cpp  CameraStreamWidget.h  ImageProcessing.cpp  ImageProcessing.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  YOLOInferenceWorker.h  config.json  main.cpp
CameraCalibration/c20/: c20.json
CameraCalibration/c30/: c30.json
CameraCalibration/c40/: c40.json
CameraCalibration/calibration1/: cameracal.ipynb
CameraCalibration/calibration1/.ipynb_checkpoints/: cameracal-checkpoint.ipynb
CentroidData/: distance_test_01.json  distance_test_02.json  gravity_test_01.json  gravity_test_02.json  gravity_test_03.json  test_prediction_11.json
MotorCameraCalibration/c20_l20_i40/: far_sweep.json  interpolated_lookuptable.json  near_sweep.json
MotorCameraCalibration/c20_l20_i50/: interpolated_lookuptable.json
MotorCameraCalibration/c20_l20_i60/: interpolated_lookuptable.json
MotorCameraCalibration/c20_l20_i70/: interpolated_lookuptable.json  lookuptable.json
